vendor/registry-40351f815f426200/remain/tests/ui/enum.stderr
error: Bbb should sort before Ccc
 --> $DIR/enum.rs:8:5
  |
8 |     Bbb(u8, u8),
  |     ^^^
